- file icons - css modification

--- a/client/src/css/main.less
+++ b/client/src/css/main.less
@@ -43,6 +43,11 @@
 
 			.thumb-image {
 				height: @thumbHeight - @thumbNameHeight - 10;
+				text-align: center;
+
+				.fa {
+					font-size: @thumbHeight - @thumbNameHeight - 10;
+				}
 			}
 
 			.thumb-name {
