--- a/client/src/js/app/templates/dir_add.html
+++ b/client/src/js/app/templates/dir_add.html
@@ -1,15 +1,17 @@
 <div class="panel panel-default main-panel">
     <div class="panel-body">
         <h2>Utwórz nowy folder</h2>
-        <form class="form form-horizontal" style="margin: 10px;">
+        <div ng-show="folder_add.$invalid && folder_add.$dirty" class="alert alert-danger">
+            <p>Nazwa folderu jest wymagana i nie może być pusta</p>
+        </div>
+        <form name="folder_add" class="form form-horizontal" novalidate style="margin: 10px;">
             <div class="form-group">
-                <input type="text" ng-model="folderName" class="form-control" placeholder="Nazwa folderu">
+                <input type="text" name="folder_name" ng-model="folderName" class="form-control" placeholder="Nazwa folderu" required>
             </div>
         </form>
         <div class="btn-group pull-right">
-            <button ng-click="addFolder()" class="btn btn-success"><i class="fa fa-check"></i>Utwórz</button>
+            <button ng-disabled="folder_add.$invalid" ng-click="addFolder()" class="btn btn-success"><i class="fa fa-check"></i>Utwórz</button>
             <button ng-click="goBack()" class="btn btn-danger"><i class="fa fa-times"></i>Anuluj</button>
         </div>
-
     </div>
 </div>
