--- a/client/src/js/app/templates/main.html
+++ b/client/src/js/app/templates/main.html
@@ -24,8 +24,13 @@
         </div>
     </div>
     <div class="sub-view" ui-view></div>
+
     <div class="panel panel-default main-panel">
         <div class="panel-body">
+            <div ng-show="parentDirId !== null" ng-click="goFolderUp()" class="thumb thumb-folder img-thumbnail">
+                <i class="thumb-image fa fa-folder-o"></i>
+                <div class="thumb-name">..</div>
+            </div>
             <div ng-repeat="dir in dirs | filter:{'name': search } | orderBy:'name'" ng-click="goToFolder(dir)" class="thumb thumb-folder img-thumbnail">
                 <i class="thumb-image fa fa-folder-o"></i>
                 <div class="thumb-name" data-ng-bind="dir.name"></div>
