--- a/client/src/js/app/templates/main.jade
+++ b/client/src/js/app/templates/main.jade
@@ -43,7 +43,7 @@ div
                 i.thumb-image.fa.fa-folder-o
                 .thumb-name(data-ng-bind="dir.name")
                 .menu.folder-menu
-                    i.fa.fa-edit
+                    i.fa.fa-edit(ng-click="editFolder(dir, $event)")
                     i.fa.fa-trash-o
             .thumb.thumb-file.img-thumbnail(ng-repeat="file in files | fileMime:(fileTypes[fileTypeFilter] || []) | filter:{'name': search } | orderBy:'name'")
                 img.thumb-image(ng-if="file.isImage()", ng-src="{{ file.src }}")
