--- a/client/src/js/app/templates/main.jade
+++ b/client/src/js/app/templates/main.jade
@@ -44,7 +44,7 @@ div
                 .thumb-name(data-ng-bind="dir.name")
                 .menu.folder-menu
                     i.fa.fa-edit(ng-click="editFolder(dir, $event)")
-                    i.fa.fa-trash-o
+                    i.fa.fa-trash-o(ng-click="removeFolder(dir, $event)")
             .thumb.thumb-file.img-thumbnail(ng-repeat="file in files | fileMime:(fileTypes[fileTypeFilter] || []) | filter:{'name': search } | orderBy:'name'")
                 img.thumb-image(ng-if="file.isImage()", ng-src="{{ file.src }}")
                 img.thumb-image.thumb-icon(ng-if="!file.isImage()", ng-src="{{ file.icon }}")
