--- a/client/src/js/app/templates/dir_remove.jade
+++ b/client/src/js/app/templates/dir_remove.jade
@@ -2,11 +2,14 @@
     .panel-body
         h2.
             Usuń folder
+        .alert.alert-danger(ng-if="error")
+            p.
+                {{ error }}
         .alert.alert-warning
             p.
                 Czy chcesz usunąć folder <strong>{{ folderName }}</strong>? Operacja ta spowoduje całkowite usunięcie tego folderu, czy kontynować?
         .btn-group.pull-right
-            button.btn.btn-success(ng-click="removeFolder()")
+            button.btn.btn-success(ng-disabled="error", ng-click="removeFolder()")
                 i.fa.fa-check.
                     Tak, usuń
             button.btn.btn-danger(ng-click="goBack()")
