remove dir fix unit tests add new unit tests

--- a/client/src/css/main.less
+++ b/client/src/css/main.less
@@ -149,11 +149,11 @@
 	}
 
 	.sub-view[ui-view].ng-enter {
-		-webkit-transition: all linear 0.8s;
-		-moz-transition: all linear 0.8s;
-		-ms-transition: all linear 0.8s;
-		-o-transition: all linear 0.8s;
-		transition: all linear 0.8s;
+//		-webkit-transition: all linear 0.8s;
+//		-moz-transition: all linear 0.8s;
+//		-ms-transition: all linear 0.8s;
+//		-o-transition: all linear 0.8s;
+//		transition: all linear 0.8s;
 	}
 
 	.sub-view[ui-view].ng-enter {
@@ -164,6 +164,14 @@
 	.sub-view[ui-view].ng-enter-active {
 		opacity: 1;
 		max-height: 600px;
+	}
+
+	.sub-view[ui-view].ng-leave {
+		opacity: 1;
+	}
+
+	.sub-view[ui-view].ng-leave-active {
+		opacity: 0;
 	}
 
 
